feat: 이용안내 페이지 추가

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -40,7 +40,7 @@
       // SDK 초기화 여부를 판단합니다.
       console.log(Kakao.isInitialized());
     </script>
-    <title>React App</title>
+    <title>느티나무 마을</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
