--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="logo-default.png" /> -->
+    <link rel="icon" href="logo-default.png" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/logo-default.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -16,13 +16,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <!-- 에디터 css -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"
-    />
-    <!-- <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.bubble.css" rel="stylesheet" /> -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
