--- a/public/mobile.html
+++ b/public/mobile.html
@@ -39,16 +39,16 @@
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script>
       Kakao.init("bedbe6cc224047931ee5f68280d829a0");
-      alert("pc");
+      alert("mobile");
       // SDK 초기화 여부를 판단합니다.
     </script>
-    <title>느티나무123 마을</title>
+    <title>느티나무 mobile 마을</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
+      This Mobile HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
