--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,9 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/logo-default.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
+    <meta name="description" content="느티나무에 오신 것을 환영합니다!">
+
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -61,3 +60,4 @@
     -->
   </body>
 </html>
+
