fix: og 태그용 메타태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
 
     <meta name="description" content="느티나무에 오신 것을 환영합니다!">
 
+    <meta property="og:title" content="느티나무마을" />
+    <meta property="og:description" content="느티나무에 오신 것을 환영합니다!" />
+    <meta property="og:image" content="https://namu0005.or.kr/api/image/view/시설안내.png" />
+    <meta property="og:url" content="https://namu0005.or.kr" />
+
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -60,4 +65,5 @@
     -->
   </body>
 </html>
+
 
