fix: 메인사진 늘리기, favicon 미노출현상, 새로고침시 흰화면 수정

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%logo-default.png" />
+    <link rel="icon" href="%PUBLIC_URL%favicon.ico" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/logo-default.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -13,7 +13,7 @@
     <meta property="og:description" content="느티나무에 오신 것을 환영합니다!" />
     <meta property="og:image" content="https://namu0005.or.kr/api/image/view/시설안내.png" />
     <meta property="og:url" content="https://namu0005.or.kr" />
-
+    <base href="/">
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
